(lang dune 3.6)

(name precclimb_ml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Timmy Jose")

(maintainers "Timmy Jose")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name precclimb_ml)
 (synopsis "A parser for basic arithmetic expressions using Precedence Climbing")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
